Add secrets to travis_secrets

--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -17,6 +17,8 @@ mqtt_password: mqtt-password
 
 influxdb_host: 10.0.8.1
 
+darksky_api_key: darksky-api-key
+
 sensor_vasttrafik_key: vasttrafik-key
 sensor_vasttrafik_secret: vasttrafik-secret
 
@@ -32,5 +34,16 @@ ifttt_key: ifttt-key
 
 light_limitlessled_host: 10.0.8.1
 
+google_assistant_project_id: google-assistant-project-id
+google_assistant_client_id: google-assistant-client-id
+google_assistant_access_token: google-assistant-access-token
+google_assistant_api_key: google-assistant-api-key
+
 notify_pushover_api_key: pushover-api-key
 notify_pushover_user_key: pushover-user-key
+notify_pushbullet_api_key: pushbullet-api-key
+notify_telegram_api_key: telegram-api-key
+notify_telegram_chat_id_1: telegram-chat-id-1
+notify_telegram_chat_id_2: telegram-chat-id-2
+notify_html5_gcm_api_key: gcm-api-key
+notify_html5_gcm_sender_id: gcm-sender-id
