--- a/configuration.yaml
+++ b/configuration.yaml
@@ -105,8 +105,8 @@ recorder:
   db_url: !secret recorder_db_url
 http:
   api_password: !secret http_api_password
-  ssl_certificate: /home/homeassistant/.homeassistant/cert.pem
-  ssl_key: /home/homeassistant/.homeassistant/privkey.pem
+  ssl_certificate: !secret ssh_certificate
+  ssl_key: !secret ssl_key
 influxdb:
   host: !secret influxdb_host
 tts:
