--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -47,3 +47,6 @@ notify_telegram_chat_id_1: telegram-chat-id-1
 notify_telegram_chat_id_2: telegram-chat-id-2
 notify_html5_gcm_api_key: gcm-api-key
 notify_html5_gcm_sender_id: gcm-sender-id
+
+ssl_certificate: ./cert.pem
+ssl_key: ./privkey.pem
