Fix typo in travis config

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -105,7 +105,7 @@ recorder:
   db_url: !secret recorder_db_url
 http:
   api_password: !secret http_api_password
-  ssl_certificate: !secret ssh_certificate
+  ssl_certificate: !secret ssl_certificate
   ssl_key: !secret ssl_key
 influxdb:
   host: !secret influxdb_host
