--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -48,5 +48,5 @@ notify_telegram_chat_id_2: telegram-chat-id-2
 notify_html5_gcm_api_key: gcm-api-key
 notify_html5_gcm_sender_id: gcm-sender-id
 
-ssl_certificate: ./cert.pem
-ssl_key: ./privkey.pem
+ssl_certificate: cert.pem
+ssl_key: privkey.pem
