--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -43,8 +43,8 @@ notify_pushover_api_key: pushover-api-key
 notify_pushover_user_key: pushover-user-key
 notify_pushbullet_api_key: pushbullet-api-key
 notify_telegram_api_key: telegram-api-key
-notify_telegram_chat_id_1: telegram-chat-id-1
-notify_telegram_chat_id_2: telegram-chat-id-2
+notify_telegram_chat_id_1: 12345
+notify_telegram_chat_id_2: 54321
 notify_html5_gcm_api_key: gcm-api-key
 notify_html5_gcm_sender_id: gcm-sender-id
 
