--- a/groups/media_players.yaml
+++ b/groups/media_players.yaml
@@ -2,8 +2,13 @@
 media_players:
   name: Mediaspelare
   view: 'yes'
+  icon: mdi:disk-player
   entities:
-    - media_player.plex_mediaserver
+    - media_player.living_room
+    - media_player.plex_antergos
+    - media_player.plex_galaxy_s8
+    - media_player.antergos
+    - media_player.galaxy_s8
     - media_player.roku_1ws3al012963
-    - remote.harmony_hub
-    - sensor.harmony_hub
+    - media_player.spotify
+    - group.remotes
