--- a/groups/upstairs.yaml
+++ b/groups/upstairs.yaml
@@ -1,9 +1,8 @@
 ---
 upstairs:
   name: Övervåning
-  view: 'yes'
+  view: 'no'
   entities:
     - switch.fonster_i_eiras_rum
-    - switch.manlampa
     - switch.fonster_i_gastrum
     - switch.fonster_i_sovrum
