Add secrets to travis_secrets

--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -16,6 +16,7 @@ mqtt_username: mqtt-username
 mqtt_password: mqtt-password
 
 influxdb_host: 10.0.8.1
+nut_host: 10.0.0.1
 
 darksky_api_key: darksky-api-key
 
@@ -39,6 +40,8 @@ google_assistant_client_id: google-assistant-client-id
 google_assistant_access_token: google-assistant-access-token
 google_assistant_api_key: google-assistant-api-key
 
+tibber_access_token: tibber-access-token
+
 notify_pushover_api_key: pushover-api-key
 notify_pushover_user_key: pushover-user-key
 notify_pushbullet_api_key: pushbullet-api-key
@@ -50,3 +53,5 @@ notify_html5_gcm_sender_id: gcm-sender-id
 
 ssl_certificate: cert.pem
 ssl_key: privkey.pem
+
+trafikverket_api_key: trafikverket-api-key
