Hide device_trackers from UI

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -124,6 +124,7 @@ homeassistant:
     media_player:
       homebridge_hidden: true
     device_tracker:
+      hidden: true
       homebridge_hidden: true
 
   customize_glob:
